k8s/clusters/glug-infra/mediawiki/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mediawiki
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: latest
